--- a/app/styles/less/about-our-vision.less
+++ b/app/styles/less/about-our-vision.less
@@ -6,7 +6,9 @@ section.our-vision {
 		ul {
 			color:@text-grey;
 			li {
-				line-height:2em;
+				line-height:auto;
+				list-style-type: none;
+				padding-bottom:1rem;
 			}
 		}
 		.column.full.text-center {
@@ -21,6 +23,7 @@ section.our-vision {
 			text-transform:uppercase;
 			font-weight:normal;
 			font-size:1.2em;
+			margin-bottom:1rem;
 		}
 	}
 }
