--- a/app/styles/less/about-team.less
+++ b/app/styles/less/about-team.less
@@ -4,6 +4,13 @@ section.team {
 		text-decoration:none;
 		color:inherit;
 	}
+	.team-intro {
+		color:@text-grey;
+		font-family:@secondary-font;
+		padding-left:2rem;
+		padding-right:2rem;
+		padding-top:2rem;
+	}
 	.in-house-team {
 		padding:3rem;
 		h3 {
@@ -48,19 +55,19 @@ section.team {
 			background-image:url(../../images/sam-lyons.jpg);
 		}
 		.marie-therese {
-			background-image:url(../../images/sam-lyons.jpg);
+			background-image:url(http://placehold.it/200x200);
 		}
 		.artur-leitis {
-			background-image:url(../../images/sam-lyons.jpg);
+			background-image:url(http://placehold.it/200x200);
 		}
 		.philip-corbally {
-			background-image:url(../../images/sam-lyons.jpg);
+			background-image:url(http://placehold.it/200x200);
 		}
 		.andre-lacerda {
 			background-image:url(../../images/andre-lacerda.jpg);
 		}
 		.robert-kamenicky {
-			background-image:url(../../images/sam-lyons.jpg);
+			background-image:url(http://placehold.it/200x200);
 		}
 		.aidan-mccarthy {
 			background-image:url(../../images/aidan-mccarthy.jpg);
