--- a/app/styles/less/media-queries-showcase-case-studies.less
+++ b/app/styles/less/media-queries-showcase-case-studies.less
@@ -1,3 +1,12 @@
+@media screen and (max-width: 48rem) {
+	.cs-main {
+		& > section {
+			.cs-icon-close {
+				top:6rem;
+			}
+		}
+	}
+}
 @media screen and (max-width: 30rem) {
 	.cs-main {
 		height:40rem;
@@ -15,6 +24,9 @@
 			&:nth-child(4) {
 				top:30rem;
 				left:0;
+			}
+			.cs-icon-close {
+				top:3rem;
 			}
 		}
 		& > section.cs-expand {
