--- a/app/styles/less/media-queries-showcase-intro.less
+++ b/app/styles/less/media-queries-showcase-intro.less
@@ -10,3 +10,12 @@
 		}
 	}
 }
+@media screen and (min-width:48rem) {
+	.block-work, .block-case-studies {
+		.column {
+			h2 {
+				font-size:4rem;
+			}
+		}
+	}
+}
