--- a/app/styles/less/services-blocks.less
+++ b/app/styles/less/services-blocks.less
@@ -12,7 +12,7 @@ section.services-blocks {
 		}
 		p {
 			font-family:@primary-font-reg;
-			font-size:2em;
+			font-size:1.5rem;
 			text-transform:uppercase;
 			color:@primary-color;
 			margin:0;
@@ -79,7 +79,7 @@ section.services-blocks {
 	.block-design {
 		background-image:url(../../images/block-design.jpg);
 		background-size:cover;
-		background-position:center;
+		background-position:50% 70%;
 	}
 	.block-consulting {
 		background-image:url(../../images/block-consulting.jpg);
