--- a/app/styles/less/showcase-work.less
+++ b/app/styles/less/showcase-work.less
@@ -341,7 +341,7 @@ div.wk-panel-items {
     top: 100%;
     z-index: 999;
     & > div {
-        background: white;
+        background: rgba(255, 255, 255, 0.9);
         border-top:5px solid @primary-color;
         z-index: 0;
         opacity: 0;
@@ -389,6 +389,7 @@ div.wk-panel-items {
         height:2rem;
         background:@text-grey;
         bottom:0;
+        display:none;
         .wk-icon-close:before {
             content: "\f107";
         }
