--- a/app/styles/less/about-header.less
+++ b/app/styles/less/about-header.less
@@ -5,6 +5,14 @@ header.about-header {
 	background-position:center;
 	width:100%;
 	height:100vh;
+	.about-header-bg {
+		position:absolute;
+		top:0;
+		height:100vh;
+		width:100%;
+		background:black;
+		opacity:0.4;
+	}
 }
 .about-header-text {
 	width:100%;
@@ -16,6 +24,10 @@ header.about-header {
 		font-size:7em;
 		margin:0;
 		font-family:@primary-font-bold;
+		text-transform:uppercase;
+	}
+	p {
+		font-family:@primary-font-reg;
 		text-transform:uppercase;
 	}
 }
