--- a/app/styles/less/media-queries-about-team.less
+++ b/app/styles/less/media-queries-about-team.less
@@ -18,6 +18,10 @@
 				width:100%;
 			}
 		}
+		.team-intro {
+			padding-left:5rem;
+			padding-right:5rem;
+		}
 	}
 }
 @media screen and (min-width: 55rem) {
