--- a/app/styles/less/showcase-case-studies.less
+++ b/app/styles/less/showcase-case-studies.less
@@ -674,6 +674,7 @@ div.cs-panel-items {
         -moz-transition: opacity 0.2s ease-in-out 0.5s;
         transition: opacity 0.2s ease-in-out 0.5s;
         padding:1rem;
+        display:none;
         span.cs-next-work {
             display: block;
             text-transform: uppercase;
