--- a/app/styles/less/about-blocks.less
+++ b/app/styles/less/about-blocks.less
@@ -18,7 +18,7 @@
 	}
 }
 .block-why-we-do-it {
-	background:url('../../images/pen.jpg');
+	background:url('../../images/block-why-we-do-it.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
@@ -44,7 +44,7 @@
 	}
 }
 .block-our-vision {
-	background:url('../../images/pen.jpg');
+	background:url('../../images/block-values.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
@@ -70,7 +70,7 @@
 	}
 }
 .block-team {
-	background:url('../../images/pen.jpg');
+	background:url('../../images/block-team.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
