--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -23,6 +23,7 @@
 @import "connect-contact";
 @import "connect-social-media";
 @import "connect-map";
+@import "blog-header";
 @import "footer";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
