--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -540,6 +540,13 @@ section.what-we-do ul.what-we-do-list li {
   padding: 5rem;
   font-size: 1.3em;
   position: relative;
+  /*i {
+		border: 2px solid white;
+		padding:.5em;
+		border-radius:50%;
+		font-size:2.5em;
+	}*/
+
 }
 .process .clearfix {
   margin-top: 4rem;
@@ -548,25 +555,24 @@ section.what-we-do ul.what-we-do-list li {
 .process .clearfix:last-child {
   margin-bottom: 5rem;
 }
-.process .clearfix:nth-child(3) {
-  margin-bottom: 30rem;
-}
 .process .clearfix .column.half {
   text-align: center;
 }
 .process .clearfix .column.half p {
   padding-right: 5rem;
   font-family: 'baufraregular';
+  cursor: hand;
+  cursor: pointer;
+}
+.process .clearfix .column.half p:nth-child(2) {
+  opacity: 0;
 }
 .process .clearfix .column.half.flow-opposite p {
   padding-left: 5rem;
   padding-right: 0;
 }
-.process i {
-  border: 2px solid white;
-  padding: .5em;
-  border-radius: 50%;
-  font-size: 2.5em;
+.process img {
+  color: white;
 }
 .how-do-we {
   position: absolute;
@@ -972,7 +978,7 @@ section.about-intro .column.full p {
   margin: 0;
 }
 .block-why-we-do-it {
-  background: url('../../images/pen.jpg');
+  background: url('../../images/block-why-we-do-it.jpg');
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -998,7 +1004,7 @@ section.about-intro .column.full p {
   text-transform: uppercase;
 }
 .block-our-vision {
-  background: url('../../images/pen.jpg');
+  background: url('../../images/block-values.jpg');
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -1024,7 +1030,7 @@ section.about-intro .column.full p {
   text-transform: uppercase;
 }
 .block-team {
-  background: url('../../images/pen.jpg');
+  background: url('../../images/block-team.jpg');
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -2871,6 +2877,51 @@ section.map .google-map iframe {
   width: 100% !important;
   height: 100% !important;
 }
+header.blog-header {
+  z-index: -1;
+  background: url(../../images/blog-header.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+}
+header.blog-header .blog-header-bg {
+  position: absolute;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background: black;
+  opacity: 0.5;
+}
+.blog-header-text {
+  width: 100%;
+  top: 40vh;
+  color: white;
+  z-index: -1;
+  font-size: 0.5em;
+}
+.blog-header-text h1 {
+  font-size: 7em;
+  margin: 0;
+  font-family: 'baufrabold';
+  text-transform: uppercase;
+}
+.blog-header-text p {
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+}
+section.blog {
+  background: white;
+  font-family: 'baufraregular';
+  text-transform: uppercase;
+  text-align: center;
+  padding: 3rem;
+  height: 40rem;
+}
+section.blog h2 {
+  color: #e74c3c;
+  font-size: 3em;
+}
 footer {
   background-image: url(../../images/fuses.jpg);
   background-size: cover;
@@ -3073,9 +3124,6 @@ footer .flow-opposite {
   .process .clearfix {
     margin-top: 2rem;
     margin-bottom: 2rem;
-  }
-  .process .clearfix:nth-child(3) {
-    margin-bottom: 22rem;
   }
   .process .clearfix:last-child {
     margin-bottom: 1rem;
@@ -3474,7 +3522,8 @@ footer .flow-opposite {
   .connect-header-text,
   .about-header-text,
   .services-header-text,
-  .showcase-header-text {
+  .showcase-header-text,
+  .blog-header-text {
     font-size: 1em;
   }
   .showcase-header-text p {
