--- a/app/styles/less/home-process.less
+++ b/app/styles/less/home-process.less
@@ -23,13 +23,18 @@
 			margin-bottom:5rem;
 		}
 		&:nth-child(3) {
-			margin-bottom:30rem;
+			//margin-bottom:30rem;
 		}
 		.column.half {
 			text-align:center;
 			p {
 				padding-right:5rem;
 				font-family:@primary-font-reg;
+				cursor:hand;
+				cursor:pointer;
+				&:nth-child(2) {
+					opacity:0;
+				}
 			}
 			&.flow-opposite {
 				p {
@@ -39,11 +44,14 @@
 			}
 		}
 	}
-	i {
+	/*i {
 		border: 2px solid white;
 		padding:.5em;
 		border-radius:50%;
 		font-size:2.5em;
+	}*/
+	img {
+		color:white;
 	}
 }
 .how-do-we {
