--- a/app/styles/less/media-queries-headers.less
+++ b/app/styles/less/media-queries-headers.less
@@ -7,7 +7,8 @@
 	.connect-header-text, 
 	.about-header-text,
 	.services-header-text,
-	.showcase-header-text  {
+	.showcase-header-text,
+	.blog-header-text  {
 		font-size:1em;
 	}
 	.showcase-header-text {
