--- a/app/styles/less/media-queries-home-process.less
+++ b/app/styles/less/media-queries-home-process.less
@@ -27,7 +27,7 @@
 			margin-top:2rem;
 			margin-bottom:2rem;
 			&:nth-child(3) {
-				margin-bottom:22rem;
+				//margin-bottom:22rem;
 			}
 			&:last-child {
 				margin-bottom:1rem;
