some organising of less files

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -1,42 +1,50 @@
-@import "grid";
+// Base
+@import "base/grid";
 @import "variables";
 @import "mixins";
-@import "navbar";
-@import "home-header";
-@import "home-what-we-do";
-@import "home-process";
-@import "home-blocks";
-@import "about-header";
-@import "about-intro";
-@import "about-blocks";
-@import "about-why-we-do-it";
-@import "about-our-vision";
-@import "about-team";
-@import "showcase-header";
-@import "showcase-intro";
-@import "showcase-blocks";
-@import "showcase-case-studies";
-@import "showcase-work";
-@import "services-header";
-@import "services-blocks";
-@import "connect-header";
-@import "connect-contact";
-@import "connect-social-media";
-@import "connect-map";
-@import "blog-header";
-@import "footer";
-@import "media-queries-navbar";
-@import "media-queries-home-header";
-@import "media-queries-home-process";
-@import "media-queries-showcase-intro";
-@import "media-queries-showcase-work";
-@import "media-queries-showcase-case-studies";
-@import "media-queries-about-intro";
-@import "media-queries-about-blocks";
-@import "media-queries-about-why-and-vision";
-@import "media-queries-about-team";
-@import "media-queries-services-blocks";
-@import "media-queries-connect";
+
+// Partials
+@import "partials/navbar";
+@import "partials/footer";
+@import "partials/media-queries-navbar";
+
+// Pages
+@import "pages/home/home-header";
+@import "pages/home/home-what-we-do";
+@import "pages/home/home-process";
+@import "pages/home/home-blocks";
+@import "pages/home/media-queries-home-header";
+@import "pages/home/media-queries-home-process";
+@import "pages/about/about-header";
+@import "pages/about/about-intro";
+@import "pages/about/about-blocks";
+@import "pages/about/about-why-we-do-it";
+@import "pages/about/about-our-vision";
+@import "pages/about/about-team";
+@import "pages/about/media-queries-about-intro";
+@import "pages/about/media-queries-about-blocks";
+@import "pages/about/media-queries-about-why-and-vision";
+@import "pages/about/media-queries-about-team";
+@import "pages/showcase/showcase-header";
+@import "pages/showcase/showcase-intro";
+@import "pages/showcase/showcase-blocks";
+@import "pages/showcase/showcase-case-studies";
+@import "pages/showcase/showcase-work";
+@import "pages/showcase/media-queries-showcase-intro";
+@import "pages/showcase/media-queries-showcase-work";
+@import "pages/showcase/media-queries-showcase-case-studies";
+@import "pages/services/services-header";
+@import "pages/services/services-blocks";
+@import "pages/services/media-queries-services-blocks";
+@import "pages/connect/connect-header";
+@import "pages/connect/connect-contact";
+@import "pages/connect/connect-social-media";
+@import "pages/connect/connect-map";
+@import "pages/connect/media-queries-connect";
+@import "pages/blog/blog-header";
+
+
+
 @import "media-queries-headers";
 @import "keyframes";
 @import "modernizr";
