--- a/app/styles/less/partials/navbar.less
+++ b/app/styles/less/partials/navbar.less
@@ -26,6 +26,9 @@ nav {
 		&:hover {
 			margin-left:1rem;
 		}
+		svg {
+			width:100%;
+		}
 	}
 	ul {
 		padding: 0;
@@ -94,6 +97,9 @@ nav {
 			.icon-nudge;
 			&:hover {
 				margin-left:-0.6rem;
+			}
+			svg {
+				width:100%;
 			}
 		}
 		i {
