--- a/app/styles/less/pages/about/about-team.less
+++ b/app/styles/less/pages/about/about-team.less
@@ -101,6 +101,7 @@ section.team {
 			color:white;
 			font-family:@primary-font-reg;
 			text-transform:uppercase;
+			line-height:16px;
 			&:first-child {
 				font-size:1.2em;
 				margin:0;
@@ -117,6 +118,11 @@ section.team {
 		border-radius:4px;
 		color:@text-grey;
 		display:none;
+		-webkit-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+		-moz-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+		-ms-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+		-o-box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
+		box-shadow:-2px 5px 10px rgba(0,0,0,0.2);
 		h3 {
 			font-family:@primary-font-reg;
 			text-transform:uppercase;
