--- a/app/styles/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/styles/less/pages/showcase/media-queries-showcase-work.less
@@ -14,7 +14,7 @@
 			width:50%;
 			height:10rem;
 			.wk-icon-close {
-				top:6rem;
+				//top:6rem;
 				right:1rem;
 			}
 			&:nth-child(2) {
@@ -83,7 +83,7 @@
 	.wk-main {
 		& > section {
 			.wk-icon-close {
-				top:3rem;
+				//top:3rem;
 				right:1rem;
 			}
 		}
