--- a/app/styles/less/pages/showcase/media-queries-showcase-case-studies.less
+++ b/app/styles/less/pages/showcase/media-queries-showcase-case-studies.less
@@ -2,7 +2,7 @@
 	.cs-main {
 		& > section {
 			.cs-icon-close {
-				top:6rem;
+				//top:6rem;
 			}
 		}
 	}
@@ -26,7 +26,7 @@
 				left:0;
 			}
 			.cs-icon-close {
-				top:3rem;
+				//top:3rem;
 			}
 		}
 		& > section.cs-expand {
