disabled scroll events on google map until clicked

--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -3443,6 +3443,7 @@ section.map .google-map iframe {
   left: 0;
   width: 100% !important;
   height: 100% !important;
+  pointer-events: none;
 }
 @media screen and (min-width: 31rem) {
   section.contact {
