--- a/app/styles/less/pages/connect/connect-map.less
+++ b/app/styles/less/pages/connect/connect-map.less
@@ -19,6 +19,7 @@ section.map {
         left: 0;
         width: 100% !important;
         height: 100% !important;
+        pointer-events: none;
     }
 
 }
