got rid of plug element for tablet and below

--- a/app/styles/less/pages/home/media-queries-home-header.less
+++ b/app/styles/less/pages/home/media-queries-home-header.less
@@ -30,7 +30,7 @@
 		font-size:1em;
 	}
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
 	.header-text-and-logo {
 		.svg-icon {
 			width: 50%;
@@ -56,5 +56,6 @@
 	}
 	.plug-and-socket {
 		top:5.7rem;
+		display:block;
 	}
 }
