--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -533,6 +533,7 @@ header.home-header .header-img {
   left: 0;
   top: 3rem;
   left: -1.5rem;
+  display: none;
 }
 .plug-and-socket .socket {
   margin-left: 2rem;
@@ -1045,7 +1046,7 @@ section.home-blocks .block-collaboration .title-and-text button:hover {
     font-size: 1em;
   }
 }
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 768px) {
   .header-text-and-logo .svg-icon {
     width: 50%;
     max-height: 10rem;
@@ -1067,6 +1068,7 @@ section.home-blocks .block-collaboration .title-and-text button:hover {
   }
   .plug-and-socket {
     top: 5.7rem;
+    display: block;
   }
 }
 @media screen and (min-width: 74rem) {
