--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -1411,10 +1411,13 @@ section.team .team-member-overlay {
   height: 100px;
   position: absolute;
   width: 200px;
-  top: 100%;
   padding: 1rem;
   text-align: left;
   opacity: 0.9;
+  top: 100%;
+}
+.touch section.team .team-member-overlay {
+  top: 50%;
 }
 section.team .team-member-overlay p {
   color: white;
