--- a/app/styles/less/pages/about/about-team.less
+++ b/app/styles/less/pages/about/about-team.less
@@ -93,10 +93,13 @@ section.team {
 		height:100px;
 		position:absolute;
 		width:200px;
-		top:100%;
 		padding:1rem;
 		text-align:left;
 		opacity:0.9;
+		top:100%;
+		.touch & {
+			top:50%;
+		}
 		p {
 			color:white;
 			font-family:@primary-font-reg;
